Remove File based system and added nosql

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -111,7 +111,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="mobile" class="form-label">Mobile <span class="text-danger">*</span></label>
-                        <input type="tel" id="mobile" name="mobile" required class="form-control">
+                        <input type="tel" id="mobile" name="mobile" maxlength="10" minlength="10" required class="form-control">
                     </div>
                     <div class="mb-3">
                         <label for="address" class="form-label">Address</label>
